# gift-card-manager

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
docs/: dev_environment.md  schema.md
migrations/: env.py  script.py.mako
migrations/versions/: 20251105_0001_initial_schema.py
src/gift_card_manager/: __init__.py  __main__.py  app.py
src/gift_card_manager/core/: __init__.py  bootstrap.py  db.py  settings.py
src/gift_card_manager/io/: __init__.py  gift_card_csv.py
src/gift_card_manager/models/: __init__.py  account.py  base.py  enums.py  gift_card.py  inventory.py  order.py  retailer.py  sales.py
src/gift_card_manager/services/: __init__.py  analytics.py  gift_cards.py  inventory.py  orders.py  sales.py
src/gift_card_manager/ui/: main_window.py
src/gift_card_manager/ui/analytics/: view.py
src/gift_card_manager/ui/gift_cards/: __init__.py  dialogs.py  model.py  tab.py  view.py
src/gift_card_manager/ui/inventory/: __init__.py  dialogs.py  history.py  model.py  tab.py  view.py
src/gift_card_manager/ui/orders/: __init__.py  dialogs.py  model.py  tab.py  view.py
src/gift_card_manager/ui/sales/: __init__.py  dialogs.py  model.py  tab.py  view.py
src/gift_card_manager/utils/: __init__.py  sku.py
