[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gift-card-manager"
version = "0.1.0"
description = "Desktop app for managing discounted gift cards, orders, inventory, and analytics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { text = "Proprietary" }
dependencies = [
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "python-dateutil>=2.9",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pyinstaller>=6.3",
  "typer>=0.12",
  "rich>=13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]